# librta

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs
RPMBUILD/SPECS/: librta.spec
SH/: build.sh
data/: librta.pc
debian/: changelog  control  copyright  librta3-dbg.dirs  librta3-dev.dirs  librta3-doc.dirs  librta3-examples.dirs  librta3.dirs  rta-dbg.dirs  rta-dev.dirs  rta-doc.dirs  rta-examples.dirs  rta.dirs  rules
doc/: FAQ.html  Makefile.am  Makefile.in  PG_Protocol.html  apiref.html  contact.html  contact.php  download.html  index.html  livedemo.html  myapp.c  myappdb.c  myappfs.c  quickstart.html  rta_apps.html  rta_client.c  rta_client.txt  rta_edit.php
empd/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  app.c  app.h  config.c  empd.h  logit.c  main.c  select.c  timers.c  ui.c
src/: Makefile  Makefile.Borland.bcc32  Makefile.am  Makefile.in  api.c  dirname.c  do_sql.c  do_sql.h  librta.h  mkstemp.c  parse.c  parse.h  parse.y  rta.h  rtafs.c  rtatables.c  strndup.c  token.c  token.l
table_editor/: Makefile.am  Makefile.in  rta_apps.html  rta_delete.php  rta_edit.php  rta_editadd.php  rta_insert.php  rta_tables.php  rta_update.php  rta_view.php
test/: Makefile  Makefile.am  Makefile.in  Makefile.pkg  app.h  appmain.c  apptables.c  librta_client.c  rta_client.c
util/: Makefile.am  Makefile.in  pgproxy.c  pprint.sh  proto73  proto74  proto74ssl
