
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/api.c)
AM_INIT_AUTOMAKE(rta,1.0.0)
AC_CONFIG_HEADERS([config.h])

dnl Checks for programs.
AC_PROG_CC
dnl AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_CHECK_TOOLS(MYBISON, bison)
AC_CHECK_TOOLS(MYFLEX, flex)

if ! test -z "$MYBISON"; then
   AC_PROG_YACC
fi

if ! test -z "$MYFLEX"; then
   AM_PROG_LEX
fi

dnl Check for the function 'main' in libc.
AC_CHECK_LIB(c, main)

dnl Check for the function 'socket' in libsocket (for Solaris).
AC_CHECK_LIB(socket, socket)

dnl Build the library 'librtafs' only if the 'libfuse' library is installed

dnl Check for the function 'fuse_mount' in the library 'libfuse'
AC_CHECK_LIB(fuse,fuse_mount,
    [ RTA_OPT_LA_LIB=librtafs.la 
      RTA_OPT_A_LIB=librtafs.a 
      TEST_OPT_LIBS=-lrtafs -lfuse], 
    [ RTA_OPT_LA_LIB= 
      RTA_OPT_A_LIB= 
      TEST_OPT_LIBS= ]) 

AC_SUBST(RTA_OPT_LA_LIB)
AC_SUBST(RTA_OPT_A_LIB)
AC_SUBST(TEST_OPT_LIBS)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h syslog.h unistd.h netinet/in.h sys/file.h sys/time.h sys/socket.h)

dnl Check if we are running on Windows 
AC_CHECK_HEADER(winsock2.h, [LIBS="$LIBS -lwsock32"])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for possibly non-standard library functions.
AC_CHECK_FUNCS(strndup mkstemp dirname strcasecmp)

AC_OUTPUT(Makefile src/Makefile test/Makefile empd/Makefile table_editor/Makefile util/Makefile doc/Makefile)
